fix dark mode selector

--- a/src/app.css
+++ b/src/app.css
@@ -66,8 +66,8 @@
     scroll-behavior: smooth;
   }
 
-  .dark html,
-  .dark body {
+  html.dark,
+  body.dark {
     background-color: var(--primary-50);
     color: var(--primary-700);
   }
